--- a/html/index.pug
+++ b/html/index.pug
@@ -3,7 +3,7 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title= pageTitle
+    title pageTitle
     link(href='./css/style.css', rel='stylesheet')
   body
     h1 html gulp build system
