--- a/html/extends/layout.pug
+++ b/html/extends/layout.pug
@@ -4,6 +4,7 @@ html(lang="en")
 		meta(charset="utf-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		title= "pageTitle"
+		link(href='./css/libs.css', rel='stylesheet')
 		link(href='./css/app.css', rel='stylesheet')
 	body
 		block body
