--- a/html/index.pug
+++ b/html/index.pug
@@ -7,5 +7,5 @@ block body
 	h1 html gulp build system
 	.container
 		p Simple and effective way to create html and css markup
-		img(src='http://i0.kym-cdn.com/photos/images/original/000/581/296/c09.jpg').doge
+		img(src='/img/dodge.jpg').doge
 		p much effective, such reload!!!!
