--- a/html/includes/_footer.pug
+++ b/html/includes/_footer.pug
@@ -1,65 +1,2 @@
 footer
-  .container.high-width
-    .row
-      .col-xs-5.col-sm-2.text-right
-        img(src="images/common/logo_large.png" alt="Footer Logo").footer-logo
-      .col-xs-7.col-sm-2 
-        .footer-content-el
-          address
-            p 
-              | Karlsruher Eislauf-
-              br
-              | und Tennisverein
-              br
-              | 1911 e.V.
-            p 
-              | Kriegsstraße 300 
-              br
-              | (beim Kühlen Krug)
-              br
-              | 76185 Karlsruhe
-            p
-              | Geschäftsstelle:
-              br 
-              | Tel. 
-              a(href="tel:0721552089") 0721 552089
-              br 
-              | Fax 0721 593297
-            p 
-              a(href="mailto:info@ketv.de") info@ketv.de              
-      .hidden-xs.col-sm-3
-        .footer-content-el
-          .footer-main-menu-wrapper
-            ul.footer-main-menu
-              li 
-                a(href="#") Startseite
-              li 
-                a(href="#") Kontakt
-              li 
-                a(href="#") Impressum 
-              li 
-                a(href="#") Datenschutz
-              li 
-                a(href="#") Werbung und Sponsoring
-      .hidden-xs.col-sm-3
-        .footer-content-el 
-          h2 Teams
-          ul.footer-sub-menu
-            li 
-              a(href="#") Herren
-            li 
-              a(href="#") Damen
-      .hidden-xs.col-sm-2
-        .footer-content-el
-          h2 Verein
-          ul.footer-sub-menu
-            li 
-              a(href="#") Lorem
-            li 
-              a(href="#") ipsum
-            li 
-              a(href="#") amet, consectetur 
-            li 
-              a(href="#") adipisicing elit
-            li 
-              a(href="#") Damen
+  .footer-content
