added footer to index

--- a/html/index.pug
+++ b/html/index.pug
@@ -9,3 +9,4 @@ block body
 		p Simple and effective way to create html and css markup
 		img(src='/img/dodge.jpg').doge/
 		p much effective, such reload!!!!
+	include ./includes/_footer.pug
