--- a/stylus/modules/_headlines.styl
+++ b/stylus/modules/_headlines.styl
@@ -1,12 +1,3 @@
 // ==========================================================================
-// base>mixins
+// modules>headlines
 // ==========================================================================
-
-// BEM mixins.
-e(name)
-	&__{name}
-		{block}
-m(name)
-	&--{name}
-		{block}
-		
